# whisper-typeless

./: .gitignore  Cargo.toml  MODEL_CATALOG.md  README.md  build-release.ps1  build.bat  build.rs  debug.bat  knowledge_graph.md  model-catalog.json  plan.md  setup.bat  spec.md  test.bat
.cargo/: config.toml
.codebase-memory/: artifact.json  graph.db.zst
scripts/: build-cpu.ps1  build-cuda.ps1  build.ps1  check-prerequisites.ps1  debug.ps1  download-model.ps1  lint.ps1  setup-cuda-env.ps1  setup-env.ps1  test.ps1  watch.ps1
src/: app.rs  lib.rs  main.rs
src/audio/: capture.rs  mod.rs  resampler.rs  vad.rs
src/context_templates/: custom.rs  detector.rs  mod.rs  templates.rs
src/file_transcription/: mod.rs
src/models/: downloader.rs  manager.rs  mod.rs  registry.rs
src/output/: clipboard.rs  formatter.rs  injector.rs  mod.rs
src/settings/: config.rs  mod.rs  persistence.rs  ui_settings.rs
src/transcription/: mod.rs  opencc.rs  pipeline.rs  postprocess.rs
src/ui/: bridge.rs  mod.rs  window_icon.rs
src/ui/bridge/: hotkey.rs  ptt.rs  recording.rs  templates.rs
src/whisper/: engine.rs  mod.rs  params.rs  session.rs
tests/: audio_tests.rs  output_tests.rs  transcription_tests.rs
ui/: appwindow.slint
ui/components/: compact_bar.slint  context_bar.slint  file_mode.slint  model_picker.slint  quick_actions.slint  settings_panel.slint  toggle.slint  transcript.slint  waveform.slint
ui/styles/: tokens.slint
